# HaskellBook

./: .gitignore  LICENSE  README.md
ch01/: Equivalence.md  Exercises.md
ch02/: AHeadCode.md  Ch02Exercises.md  ComprehensionCheck.hs  HealTheSick.hs  ParenthesesAndAssociation.md  RewriteWithWhere.hs  SayHello.hs  WaxOn.hs
ch03/: Extract.hs  LetterIndex.hs  Print3Broken.hs  Reverse.hs  Scope.md  SyntaxErrors.md  ThirdLetter.hs  ch03Exercises.md
ch04/: FindTheMistakes.hs  FindTheMistakes.md  MoodSwing.hs  ch04Exercises.md  isPalindrome.hs  myAbs.hs
ch05/: ApplyYourself.md  Parametricity.md  TypeArguments.md  TypeKwonDo.hs  TypeMatching.md  TypeSignature.hs  WriteTheFunction.hs  arith3broken.hs  ch05Exercises.md  determineTheType.hs  doesItCompile.hs  sing.hs  sing2.hs
ch06/: DoesItTypecheck.hs  ElectricTypealoo.hs  EqInstances.hs  MatchTheTypes.hs  TupleExperiment.md  WillTheyWork.md  ch06Exercises.md
ch07/: Arith2.hs  Arith4A.hs  Arith4B.hs  Arith4C.hs  ArtfulDodgy.hs  CasePractice.hs  GrabBag.hs  GuardDuty.hs  LetsWriteCode.hs  VarietyPack.hs  ch07Exercises.md
ch08/: ApplyTimes.hs  DividedBy.hs  McCarthy91.hs  Recursion.hs  ReviewingCurrying.hs  ch08Exercises.md
ch09/: BottomMadness.md  Cipher.hs  ComprehendThyLists.hs  DataChar.hs  EnumFromTo.hs  FearfulSymmetry.hs  Filtering.hs  MapThree.hs  MoreBottoms.md  PoemLines.hs  SquareCube.hs  StandardFunctions.hs  Zipping.hs  safeHead.hs
ch10/: DatabaseProcessing.hs  RewritingFunctions.hs  ScanExercises.hs  UnderstandingFolds.hs  WarmUp.hs
ch13/hangman/: LICENSE  hangman.cabal
ch13/hangman/src/: Main.hs
(+115 files in other folders)
